syntax = "proto3";
package panacea.datapool.v2;

option go_package = "github.com/medibloc/panacea-core/x/datapool/types";

import "cosmos/base/v1beta1/coin.proto";
import "panacea/datapool/v2/pool.proto";

// GenesisState defines the datapool module's genesis state.
message GenesisState {
  repeated panacea.datapool.v2.DataValidator data_validators = 1;
  uint64                                     next_pool_number = 2;
  map<uint64, Pool>                          pools = 3;
}

// Params define parameters of datapool module
message Params {
  cosmos.base.v1beta1.Coin min_data_pool_deposit = 1;
}